2007-08-12  Luca Bruno  <lethalman88@gmail.com>

	* src/main.c (_getopt_do): -c option has been added

	* st/kernel/SystemDictionary.st (continueStartup): a new variable has been added to specify if the startup sequence must continue after fileing in files

	* syx/syx-platform.h (SYX_PLUGIN_PATH): added

	* SConstruct: option 'plugindir' has been added which belongs by default to the machine-dependent directory $libdir/syx

2007-08-11  Luca Bruno  <lethalman88@gmail.com>

	* plugins/gtk/st/GtkTextBuffer.st: added but doesn't work yet because of other Gtk dependencies

	* st/kernel/initialDecl (CompiledCode): argumentCount and temporaryCount have been renamed to argumentStackSize and temporaryStackSize and moved to CompiledMethod
	(CompiledBlock): argumentsTop has been renamed to argumentStackTop

	* syx/syx-enums.h: instance variables of CompiledCode, CompiledMethod and CompiledBlock have been updated

	* syx/syx-object.c: method and block context creation have been updated according to the above refactoring
	
	* st/kernel/PositionableStream.st (peek): answer nil if at the end
	(skipTo:): added

	* syx/syx-lexer.c (_syx_lexer_token_symbol): support for quoted symbols

	* st/kernel/Compiler.st (initializeStream): support for quoted symbols

	* syx/syx-init.c (syx_set_root_path): save the root path anyway also if it doesn't exist

	* src/main.c (_getopt_do): fixed issue #11

	* syx/syx-primitives.c (FileStream_fileOp): assert the object is a string for nextPutAll:

	* plugins/wingui/SConscript: fixed building

	Renamed all 'class' to 'klass' to support C++ compilation.
	Applied issue #9 patch

2007-08-10  Luca Bruno  <lethalman88@gmail.com>

	Refactored all inline to be inserted into headers (issue #9).
	Added dllimport and dllexport attributes when building DLLs.
	
	* syx/syx-memory.c (syx_freev): removed

	* plugins/gtk/st/GtkScrolledWindow.st: added

	* plugins/gtk/st/GtkAdjustment.st: added
