@@ -91,6 +91,11 @@ rehashClass
 
 !SystemDictionary methodsFor: 'accessing'!
 
+haveBigEndianness
+    <primitive: 'Smalltalk_haveBigEndianness'>
+    		self primitiveFailed
+!
+
 commandLineArguments
     ^commandLineArguments
 ! !
